output/dev/externprintstring.err
output prefix: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring
llvmas: /Users/cmk/llvm/bin/llvm-as
llc: /Users/cmk/llvm/bin/llc
cc: gcc
codegen: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decafexpr
stdlib: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decaf-stdlib.c
generating llvm code:/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decafexpr ... ok
; ModuleID = 'Test'

declare void @print_string(i32*)

define i32 @main() {
entry:
  %x = alloca i32
  store i32 1, i32* %x
  call void @print_string([15 x i16] [i16 26658, i16 27749, i16 28524, i16 30496, i16 29295, i16 25708, i16 28252, i16 34, i16 0, i16 0, i16 0, i16 22528, i16 -13980, i16 257, i16 0])
  ret i32 0
}
assembling to bitcode:/Users/cmk/llvm/bin/llvm-as "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm" -o "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm.bc" ... failed (1)
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm:9:13: error: '@print_string' defined with type 'void (i32*)*'
  call void @print_string([15 x i16] [i16 26658, i16 27749, i16 28524, i16 30496, i16 29295, i16 25708, i16 28252, i16 34, i16 0, i16 0, i16 0, i16 22528, i16 -13980, i16 257, i16 0])
            ^
converting to native code:/Users/cmk/llvm/bin/llc "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm.bc" -o "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm.s" ... failed (1)
/Users/cmk/llvm/bin/llc: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm.bc: error: Could not open input file: No such file or directory
linking:gcc -o "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm.exec" "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm.s" "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decaf-stdlib.c" ... failed (1)
clang: error: no such file or directory: '/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm.s'
running:/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm.exec ...Traceback (most recent call last):
  File "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/llvm-run", line 172, in <module>
    result &= run("running", "%s.llvm.exec" % (out_prefix), ".run", None, out_prefix)
  File "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/llvm-run", line 90, in run
    retval = subprocess.call(shlex.split(cmd), stdin=infile, stdout=outoutfile, stderr=outerrfile)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 522, in call
    return Popen(*popenargs, **kwargs).wait()
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 710, in __init__
    errread, errwrite)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 1335, in _execute_child
    raise child_exception
OSError: [Errno 2] No such file or directory
